# nhplatform

./: CMakeLists.txt
example/: CMakeLists.txt  main.c
include/: nh_platform.h
src/: nh_platform.c
